--- a/PropFinder/Dockerfile.frontend
+++ b/PropFinder/Dockerfile.frontend
@@ -2,18 +2,19 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Install dependencies
+RUN npm install -g vite
+
 # Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
 COPY vite.config.ts ./
 COPY tailwind.config.js ./
 COPY postcss.config.js ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install
 
 # Copy source code
-COPY public ./public
 COPY src ./src
 COPY index.html ./
 
@@ -23,4 +24,5 @@ RUN npm run build
 # Serve the application
 EXPOSE 3000
 
+# Start the server
 CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "3000"]
