--- a/PropFinder/docker-compose.yml
+++ b/PropFinder/docker-compose.yml
@@ -24,13 +24,10 @@ services:
   # Backend API Service
   backend:
     build:
-      context: .
-      dockerfile: Dockerfile.backend
+      context: ./backend
+      dockerfile: ./Dockerfile
     ports:
       - "5000:5000"
-    volumes:
-      - .:/app
-      - /app/node_modules
     environment:
       - NODE_ENV=development
       - DATABASE_URL=postgresql://propfinder:password@postgres:5432/propfinder_db
@@ -48,8 +45,8 @@ services:
   # WebSocket Service for Real-time Chat
   websocket:
     build:
-      context: .
-      dockerfile: Dockerfile.websocket
+      context: ./websocket
+      dockerfile: ../Dockerfile.websocket
     ports:
       - "5001:5001"
     environment:
@@ -91,7 +88,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - frontend
       - backend
