--- a/PropFinder/package.json
+++ b/PropFinder/package.json
@@ -10,28 +10,62 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "sonar": "sonar-scanner",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.344.0",
+    "mapbox-gl": "^3.1.2",
     "react": "^18.3.1",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.7.0"
+    "react-dropzone": "^14.2.3",
+    "react-error-boundary": "^4.0.12",
+    "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.8.0",
+    "react-map-gl": "^7.1.7",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^7.7.0",
+    "react-select": "^5.8.0",
+    "recharts": "^2.12.0",
+    "socket.io-client": "^4.7.4",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^2.2.1",
+    "zod": "^4.0.14",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/mapbox-gl": "^2.7.19",
     "@types/react": "^18.3.5",
+    "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
