--- a/PropFinder/websocket/package.json
+++ b/PropFinder/websocket/package.json
@@ -1,16 +1,20 @@
 {
   "name": "propfinder-websocket",
   "version": "1.0.0",
-  "description": "WebSocket server for PropFinder real estate portal",
+  "description": "WebSocket server for PropFinder real-time chat",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "socket.io": "^4.7.2",
-    "redis": "^4.6.10",
-    "dotenv": "^16.3.1"
+    "ws": "^8.14.2",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
