feat(api): refactorizar recuperación de perfil e implementar obtención pública de propiedades
feat(api): unificar métodos de pago y agregar recuperación de proveedores de pago

fix(api): mejorar recuperación de conversaciones con respuesta de éxito opcional

chore(vite): configurar proxy de servidor y optimizaciones de compilación

chore(websocket): mejorar manejo de conexión Redis y agregar autenticación local

feat(backend): crear scripts para verificar y crear tablas de base de datos necesarias

feat(backend): implementar rutas de conversación y mensajes con autenticación

feat(backend): agregar script de verificación de usuario para pruebas

chore(setup): mejorar script de configuración de PowerShell para mejor experiencia de usuario

chore(start): crear script integral de inicio de PowerShell para varios modos

feat(websocket): implementar servidor WebSocket simplificado con autenticación y verificación de estadofeat(api): refactorizar recuperación de perfil e implementar obtención pública de propiedades

feat(api): unificar métodos de pago y agregar recuperación de proveedores de pago

fix(api): mejorar recuperación de conversaciones con respuesta de éxito opcional

chore(vite): configurar proxy de servidor y optimizaciones de compilación

chore(websocket): mejorar manejo de conexión Redis y agregar autenticación local

feat(backend): crear scripts para verificar y crear tablas de base de datos necesarias

feat(backend): implementar rutas de conversación y mensajes con autenticación

feat(backend): agregar script de verificación de usuario para pruebas

chore(setup): mejorar script de configuración de PowerShell para mejor experiencia de usuario

chore(start): crear script integral de inicio de PowerShell para varios modos

feat(websocket): implementar servidor WebSocket simplificado con autenticación y verificación de estado

--- a/PropFinder/.env.example
+++ b/PropFinder/.env.example
@@ -1,30 +1,23 @@
-# Configuración del servidor
+# ==============================================
+# PROPFINDER - VARIABLES DE ENTORNO FRONTEND
+# ==============================================
+
+# Configuración de desarrollo
 NODE_ENV=development
-PORT=5000
 
-# Base de datos PostgreSQL
-DATABASE_URL=postgresql://postgres.dctyphlldttruclnipue:12345678oscarmeza123@aws-0-us-east-1.pooler.supabase.com:6543/postgres
-# Redis
-REDIS_URL=redis://localhost:6379
-
-# Frontend variables
+# URLs de la API y WebSocket
 VITE_API_URL=http://localhost:5000/api
 VITE_WEBSOCKET_URL=ws://localhost:5001
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Configuración de Mapbox (para mapas)
+VITE_MAPBOX_TOKEN=your_mapbox_access_token_here
 
-# Stripe (para pagos)
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
+# Configuración de analytics (opcional)
+VITE_GOOGLE_ANALYTICS_ID=your_google_analytics_id_here
 
-# PayPal (para pagos)
-PAYPAL_CLIENT_ID=your_paypal_client_id
-PAYPAL_CLIENT_SECRET=your_paypal_client_secret
-PAYPAL_MODE=sandbox
+# Configuración de Sentry (opcional para error tracking)
+VITE_SENTRY_DSN=your_sentry_dsn_here
 
-# Frontend URL (para redirecciones)
-FRONTEND_URL=http://localhost:3000
-
-# WebSocket
-WEBSOCKET_PORT=5001
+# URLs de producción (comentadas para desarrollo)
+# VITE_API_URL=https://api.yourdomain.com/api
+# VITE_WEBSOCKET_URL=wss://api.yourdomain.com
