--- a/PropFinder/backend/env.example
+++ b/PropFinder/backend/env.example
@@ -1,27 +1,76 @@
+# ==============================================
+# PROPFINDER - VARIABLES DE ENTORNO BACKEND
+# ==============================================
+
 # Configuración del servidor
 NODE_ENV=development
 PORT=5000
 
 # Base de datos PostgreSQL
-DATABASE_URL=postgresql://username:password@localhost:5432/propfinder
+DATABASE_URL=postgresql://username:password@localhost:5432/propfinder_db
 
-# Redis
+# Redis (para caché y sesiones)
 REDIS_URL=redis://localhost:6379
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Configuración JWT
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-use-at-least-32-characters
+JWT_EXPIRES_IN=24h
+
+# Configuración de Email (SMTP)
+EMAIL_SERVICE=gmail
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM=noreply@propfinder.com
+
+# Para desarrollo local puedes usar Mailtrap
+# EMAIL_HOST=smtp.mailtrap.io
+# EMAIL_PORT=2525
+# EMAIL_USER=your-mailtrap-user
+# EMAIL_PASS=your-mailtrap-password
 
 # Stripe (para pagos)
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 
 # PayPal (para pagos)
 PAYPAL_CLIENT_ID=your_paypal_client_id
 PAYPAL_CLIENT_SECRET=your_paypal_client_secret
 PAYPAL_MODE=sandbox
 
-# Frontend URL (para redirecciones)
+# MercadoPago (para pagos en Latinoamérica)
+MERCADOPAGO_ACCESS_TOKEN=your_mercadopago_access_token
+MERCADOPAGO_PUBLIC_KEY=your_mercadopago_public_key
+
+# URLs de la aplicación
 FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:5000
 
 # WebSocket
 WEBSOCKET_PORT=5001
+
+# Configuración de subida de archivos
+MAX_FILE_SIZE=10485760
+UPLOAD_PATH=./uploads
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,application/pdf
+
+# Configuración de logging
+LOG_LEVEL=info
+LOG_FILE=./logs/combined.log
+ERROR_LOG_FILE=./logs/error.log
+
+# Configuración de rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Configuración de seguridad
+BCRYPT_ROUNDS=12
+SESSION_SECRET=your-session-secret-key
+
+# Configuración de base de datos para testing
+TEST_DATABASE_URL=postgresql://username:password@localhost:5432/propfinder_test
+
+# Configuración de Redis para testing
+TEST_REDIS_URL=redis://localhost:6379/1
