--- a/PropFinder/package.json
+++ b/PropFinder/package.json
@@ -15,7 +15,11 @@
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start:all": "concurrently \"npm run dev\" \"npm run backend:dev\" \"npm run websocket:dev\"",
+    "backend:dev": "cd backend && npm run dev",
+    "websocket:dev": "cd websocket && npm run dev",
+    "install:all": "npm install && cd backend && npm install && cd ../websocket && npm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -53,6 +57,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/mapbox-gl": "^2.7.19",
+    "@types/node": "^24.2.0",
     "@types/react": "^18.3.5",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.3.0",
@@ -61,6 +66,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
