--- a/PropFinder/websocket/package.json
+++ b/PropFinder/websocket/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\"",
+    "setup": "npm install"
   },
   "dependencies": {
     "ws": "^8.14.2",
