--- a/PropFinder/.env.example
+++ b/PropFinder/.env.example
@@ -21,3 +21,9 @@ VITE_SENTRY_DSN=your_sentry_dsn_here
 # URLs de producción (comentadas para desarrollo)
 # VITE_API_URL=https://api.yourdomain.com/api
 # VITE_WEBSOCKET_URL=wss://api.yourdomain.com
+# Configuración de desarrollo
+NODE_ENV=development
+
+# URLs de la API y WebSocket
+VITE_API_URL=http://localhost:5000/api
+VITE_WEBSOCKET_URL=ws://localhost:5001
