--- a/PropFinder/package.json
+++ b/PropFinder/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/recharts": "^1.8.29",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -44,7 +45,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.7.0",
     "react-select": "^5.8.0",
-    "recharts": "^2.12.0",
+    "recharts": "^2.15.4",
     "socket.io-client": "^4.7.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.2.1",
