--- a/PropFinder/backend/package.json
+++ b/PropFinder/backend/package.json
@@ -30,6 +30,7 @@
     "mercadopago": "^2.8.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.7",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.3",
